Remove UI_DEVTOOLS_EXPORT from class and add it to static methods

The error was caused because static methods in devtools_server.h were
not marked UI_DEVTOOLS_EXPORT. We cannot mark them as such if the whole
class is already marked. Therefore, we need to remove the export from the
class and add it to the static methods.

BUG=669352

Review-Url: https://codereview.chromium.org/2560013002
Cr-Commit-Position: refs/heads/master@{#437338}

Former-commit-id: c9d4abeb958fde2ab943e4e32d445ae695d71630